@@ -31,6 +31,7 @@ import net.minecraft.util.math.MathHelper;
 import org.spongepowered.asm.mixin.Final;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Shadow;
+import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
@@ -47,6 +48,7 @@ public abstract class MixinChatHud implements IChatHud {
     @Shadow private int scrolledLines;
     @Shadow private boolean hasUnreadNewMessages;
 
+    @Unique
     private AbstractChatTab tab;
 
     @Shadow
@@ -56,7 +58,7 @@ public abstract class MixinChatHud implements IChatHud {
     public abstract double getChatScale();
 
     @Shadow
-    protected abstract boolean isChatFocused();
+    public abstract boolean isChatFocused();
 
     @Shadow
     public abstract void scroll(int amount);
@@ -73,7 +75,7 @@ public abstract class MixinChatHud implements IChatHud {
     }
 
     @Inject(at = @At("HEAD"), method = "render", cancellable = true)
-    private void render(DrawContext context, int delta, int mouseX, int mouseY, CallbackInfo ci) {
+    private void render(DrawContext context, int currentTick, int mouseX, int mouseY, boolean focused, CallbackInfo ci) {
         // Ignore rendering vanilla chat if disabled
         if (!HudConfigStorage.General.VANILLA_HUD.config.getBooleanValue()) {
             ci.cancel();
@@ -137,7 +139,7 @@ public abstract class MixinChatHud implements IChatHud {
         OrderedText orderedText;
         for (Iterator<OrderedText> text = list.iterator();
                 text.hasNext();
-                this.visibleMessages.add(0, new ChatHudLine.Visible(msg.getCreationTick(), orderedText, msg.getIndicator(), !text.hasNext()))) {
+                this.visibleMessages.addFirst(new ChatHudLine.Visible(msg.getCreationTick(), orderedText, msg.getIndicator(), !text.hasNext()))) {
             orderedText = text.next();
             if (this.isChatFocused() && this.scrolledLines > 0) {
                 this.hasUnreadNewMessages = true;
@@ -147,13 +149,13 @@ public abstract class MixinChatHud implements IChatHud {
 
         while (this.visibleMessages.size()
                 > HudConfigStorage.General.STORED_LINES.config.getIntegerValue()) {
-            this.visibleMessages.remove(this.visibleMessages.size() - 1);
+            this.visibleMessages.removeLast();
         }
 
-        this.messages.add(0, new ChatHudLine(msg.getCreationTick(), msg.getDisplayText(), msg.getSignature(), msg.getIndicator()));
+        this.messages.addFirst(new ChatHudLine(msg.getCreationTick(), msg.getDisplayText(), msg.getSignature(), msg.getIndicator()));
         while (this.messages.size()
                 > HudConfigStorage.General.STORED_LINES.config.getIntegerValue()) {
-            this.messages.remove(this.messages.size() - 1);
+            this.messages.removeLast();
         }
     }
 
